# ocr_cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: onnx_utils.h.126E28E545EC5632.idx  onnxruntime_c_api.h.D80FFD57DEE3AF04.idx  run_ocr.cpp.0E8AA43F331689DE.idx  yolo_model.h.91978FD2BB860F6C.idx
include/: onnx_utils.h
include/yolo_utils/: BoundedThreadSafeQueue.hpp  Debug.hpp  ScopedTimer.hpp
models/: id_ki_classes.txt
src/: main.cpp  paddle_rec.h  rec.h  run_ocr.cpp  yolo_model.h
